--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "proyecto-1a-matematicas-0643",
+  "name": "proyectoamatematicas",
   "version": "2.0.0",
   "description": "Proyecto de matematicas ",
   "main": "index.js",
